Lab/Lab1/src/Parse.output
Terminals unused in grammar

    INT_ERROR
    FLOAT_ERROR
    ID_ERROR
    ERROR
    NOTATOKEN


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompStm
    7       | error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | ε

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP

   21 VarList: ParamDec COMMA VarList
   22        | ParamDec

   23 ParamDec: Specifier VarDec

   24 CompStm: LC DefList StmtList RC

   25 StmtList: Stmt StmtList
   26         | ε

   27 Stmt: Exp SEMI
   28     | CompStm
   29     | RETURN Exp SEMI
   30     | IF LP Exp RP Stmt
   31     | IF LP Exp RP Stmt ELSE Stmt
   32     | WHILE LP Exp RP Stmt
   33     | error SEMI

   34 DefList: Def DefList
   35        | ε

   36 Def: Specifier DecList SEMI

   37 DecList: Dec
   38        | Dec COMMA DecList

   39 Dec: VarDec
   40    | VarDec ASSIGNOP Exp

   41 Exp: Exp ASSIGNOP Exp
   42    | Exp AND Exp
   43    | Exp OR Exp
   44    | Exp RELOP Exp
   45    | Exp PLUS Exp
   46    | Exp MINUS Exp
   47    | Exp STAR Exp
   48    | Exp DIV Exp
   49    | LP Exp RP
   50    | MINUS Exp
   51    | NOT Exp
   52    | ID LP Args RP
   53    | ID LP RP
   54    | Exp LB Exp RB
   55    | Exp DOT ID
   56    | ID
   57    | INT
   58    | FLOAT

   59 Args: Exp COMMA Args
   60     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 33
    INT <parseNode> (258) 18 57
    FLOAT <parseNode> (259) 58
    ID <parseNode> (260) 14 16 17 19 20 52 53 55 56
    SEMI <parseNode> (261) 4 5 7 27 29 33 36
    COMMA <parseNode> (262) 9 21 38 59
    ASSIGNOP <parseNode> (263) 40 41
    PLUS <parseNode> (264) 45
    MINUS <parseNode> (265) 46 50
    STAR <parseNode> (266) 47
    DIV <parseNode> (267) 48
    AND <parseNode> (268) 42
    OR <parseNode> (269) 43
    DOT <parseNode> (270) 55
    NOT <parseNode> (271) 51
    RELOP <parseNode> (272) 44
    LP <parseNode> (273) 19 20 30 31 32 49 52 53
    RP <parseNode> (274) 19 20 30 31 32 49 52 53
    LB <parseNode> (275) 18 54
    RB <parseNode> (276) 18 54
    LC <parseNode> (277) 12 24
    RC <parseNode> (278) 12 24
    TYPE <parseNode> (279) 10
    STRUCT <parseNode> (280) 12 13
    RETURN <parseNode> (281) 29
    IF <parseNode> (282) 30 31
    ELSE <parseNode> (283) 31
    WHILE <parseNode> (284) 32
    INT_ERROR <parseNode> (285)
    FLOAT_ERROR <parseNode> (286)
    ID_ERROR <parseNode> (287)
    ERROR <parseNode> (288)
    NOTATOKEN <parseNode> (289)


Nonterminals, with rules where they appear

    $accept (35)
        on left: 0
    Program <parseNode> (36)
        on left: 1
        on right: 0
    ExtDefList <parseNode> (37)
        on left: 2 3
        on right: 1 2
    ExtDef <parseNode> (38)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <parseNode> (39)
        on left: 8 9
        on right: 4 9
    Specifier <parseNode> (40)
        on left: 10 11
        on right: 4 5 6 23 36
    StructSpecifier <parseNode> (41)
        on left: 12 13
        on right: 11
    OptTag <parseNode> (42)
        on left: 14 15
        on right: 12
    Tag <parseNode> (43)
        on left: 16
        on right: 13
    VarDec <parseNode> (44)
        on left: 17 18
        on right: 8 9 18 23 39 40
    FunDec <parseNode> (45)
        on left: 19 20
        on right: 6
    VarList <parseNode> (46)
        on left: 21 22
        on right: 19 21
    ParamDec <parseNode> (47)
        on left: 23
        on right: 21 22
    CompStm <parseNode> (48)
        on left: 24
        on right: 6 28
    StmtList <parseNode> (49)
        on left: 25 26
        on right: 24 25
    Stmt <parseNode> (50)
        on left: 27 28 29 30 31 32 33
        on right: 25 30 31 32
    DefList <parseNode> (51)
        on left: 34 35
        on right: 12 24 34
    Def <parseNode> (52)
        on left: 36
        on right: 34
    DecList <parseNode> (53)
        on left: 37 38
        on right: 36 38
    Dec <parseNode> (54)
        on left: 39 40
        on right: 37 38
    Exp <parseNode> (55)
        on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58
        on right: 27 29 30 31 32 40 41 42 43 44 45 46 47 48 49 50 51 54 55 59 60
    Args <parseNode> (56)
        on left: 59 60
        on right: 52 59


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 10

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompStm

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 11

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 20


State 12

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

   17 VarDec: ID •
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 16

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 22


State 18

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec • CompStm

    LC  shift, and go to state 25

    CompStm  go to state 26


State 20

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


State 21

   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP

    RP      shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 32
    ParamDec         go to state 33


State 22

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 23

    9 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 34

    ExtDecList  go to state 35
    VarDec      go to state 18


State 24

   18 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 36


State 25

   24 CompStm: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 37
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompStm •

    $default  reduce using rule 6 (ExtDef)


State 27

   36 Def: Specifier • DecList SEMI

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 41


State 29

   34 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 35 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 29


State 30

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 31

   23 ParamDec: Specifier • VarDec

    ID  shift, and go to state 34

    VarDec  go to state 43


State 32

   19 FunDec: ID LP VarList • RP

    RP  shift, and go to state 44


State 33

   21 VarList: ParamDec • COMMA VarList
   22        | ParamDec •

    COMMA  shift, and go to state 45

    $default  reduce using rule 22 (VarList)


State 34

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 35

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 36

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 46


State 37

   24 CompStm: LC DefList • StmtList RC

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 25
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 26 (StmtList)

    CompStm   go to state 57
    StmtList  go to state 58
    Stmt      go to state 59
    Exp       go to state 60


State 38

   18 VarDec: VarDec • LB INT RB
   39 Dec: VarDec •
   40    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 61
    LB        shift, and go to state 24

    $default  reduce using rule 39 (Dec)


State 39

   36 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 62


State 40

   37 DecList: Dec •
   38        | Dec • COMMA DecList

    COMMA  shift, and go to state 63

    $default  reduce using rule 37 (DecList)


State 41

   12 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 12 (StructSpecifier)


State 42

   34 DefList: Def DefList •

    $default  reduce using rule 34 (DefList)


State 43

   18 VarDec: VarDec • LB INT RB
   23 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 23 (ParamDec)


State 44

   19 FunDec: ID LP VarList RP •

    $default  reduce using rule 19 (FunDec)


State 45

   21 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 31
    StructSpecifier  go to state 8
    VarList          go to state 64
    ParamDec         go to state 33


State 46

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 47

   33 Stmt: error • SEMI

    SEMI  shift, and go to state 65


State 48

   57 Exp: INT •

    $default  reduce using rule 57 (Exp)


State 49

   58 Exp: FLOAT •

    $default  reduce using rule 58 (Exp)


State 50

   52 Exp: ID • LP Args RP
   53    | ID • LP RP
   56    | ID •

    LP  shift, and go to state 66

    $default  reduce using rule 56 (Exp)


State 51

   50 Exp: MINUS • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 67


State 52

   51 Exp: NOT • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 68


State 53

   49 Exp: LP • Exp RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 69


State 54

   29 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 70


State 55

   30 Stmt: IF • LP Exp RP Stmt
   31     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 71


State 56

   32 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 72


State 57

   28 Stmt: CompStm •

    $default  reduce using rule 28 (Stmt)


State 58

   24 CompStm: LC DefList StmtList • RC

    RC  shift, and go to state 73


State 59

   25 StmtList: Stmt • StmtList

    error   shift, and go to state 47
    INT     shift, and go to state 48
    FLOAT   shift, and go to state 49
    ID      shift, and go to state 50
    MINUS   shift, and go to state 51
    NOT     shift, and go to state 52
    LP      shift, and go to state 53
    LC      shift, and go to state 25
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56

    RC  reduce using rule 26 (StmtList)

    CompStm   go to state 57
    StmtList  go to state 74
    Stmt      go to state 59
    Exp       go to state 60


State 60

   27 Stmt: Exp • SEMI
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    SEMI      shift, and go to state 75
    ASSIGNOP  shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    DOT       shift, and go to state 83
    RELOP     shift, and go to state 84
    LB        shift, and go to state 85


State 61

   40 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 86


State 62

   36 Def: Specifier DecList SEMI •

    $default  reduce using rule 36 (Def)


State 63

   38 DecList: Dec COMMA • DecList

    ID  shift, and go to state 34

    VarDec   go to state 38
    DecList  go to state 87
    Dec      go to state 40


State 64

   21 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 21 (VarList)


State 65

   33 Stmt: error SEMI •

    $default  reduce using rule 33 (Stmt)


State 66

   52 Exp: ID LP • Args RP
   53    | ID LP • RP

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53
    RP     shift, and go to state 88

    Exp   go to state 89
    Args  go to state 90


State 67

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   50    | MINUS Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    STAR  shift, and go to state 79
    DIV   shift, and go to state 80
    DOT   shift, and go to state 83
    LB    shift, and go to state 85

    $default  reduce using rule 50 (Exp)


State 68

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   51    | NOT Exp •
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    DOT  shift, and go to state 83
    LB   shift, and go to state 85

    $default  reduce using rule 51 (Exp)


State 69

   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   49    | LP Exp • RP
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    DOT       shift, and go to state 83
    RELOP     shift, and go to state 84
    RP        shift, and go to state 91
    LB        shift, and go to state 85


State 70

   29 Stmt: RETURN Exp • SEMI
   41 Exp: Exp • ASSIGNOP Exp
   42    | Exp • AND Exp
   43    | Exp • OR Exp
   44    | Exp • RELOP Exp
   45    | Exp • PLUS Exp
   46    | Exp • MINUS Exp
   47    | Exp • STAR Exp
   48    | Exp • DIV Exp
   54    | Exp • LB Exp RB
   55    | Exp • DOT ID

    SEMI      shift, and go to state 92
    ASSIGNOP  shift, and go to state 76
    PLUS      shift, and go to state 77
    MINUS     shift, and go to state 78
    STAR      shift, and go to state 79
    DIV       shift, and go to state 80
    AND       shift, and go to state 81
    OR        shift, and go to state 82
    DOT       shift, and go to state 83
    RELOP     shift, and go to state 84
    LB        shift, and go to state 85


State 71

   30 Stmt: IF LP • Exp RP Stmt
   31     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 93


State 72

   32 Stmt: WHILE LP • Exp RP Stmt

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 94


State 73

   24 CompStm: LC DefList StmtList RC •

    $default  reduce using rule 24 (CompStm)


State 74

   25 StmtList: Stmt StmtList •

    $default  reduce using rule 25 (StmtList)


State 75

   27 Stmt: Exp SEMI •

    $default  reduce using rule 27 (Stmt)


State 76

   41 Exp: Exp ASSIGNOP • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 95


State 77

   45 Exp: Exp PLUS • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 96


State 78

   46 Exp: Exp MINUS • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 97


State 79

   47 Exp: Exp STAR • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 98


State 80

   48 Exp: Exp DIV • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 99


State 81

   42 Exp: Exp AND • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 100


State 82

   43 Exp: Exp OR • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 101


State 83

   55 Exp: Exp DOT • ID

    ID  shift, and go to state 102


State 84

   44 Exp: Exp RELOP • Exp

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 103


State 85

   54 Exp: Exp LB • Exp RB

    INT    shift, and go to state 48
    FLOAT  shift, and go to state 49
    ID     shift, and go to state 50
    MINUS  shift, and go to state 51
    NOT    shift, and go to state 52
    LP     shift, and go to state 53

    Exp  go to state 104


State 86
